# mcp_from_scratch

./: README.md  main.py  mcp_client.py  pyproject.toml  requirements.txt
binance_mcp/: binance_mcp.py  binance_mcp_sse.py  symbol_map.csv
langgraph/: price_graph.py
typescript_mcp/: README.md  package-lock.json  package.json  symbol_map.csv  tsconfig.json
typescript_mcp/src/: binance_mcp.ts
