[project]
name = "mcp-from-scratch"
version = "0.1.0"
description = "MCP project from scratch"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "google-generativeai==0.8.5",
    "langchain==0.3.25",
    "langchain-core==0.3.59",
    "langchain-google-genai==2.0.10",
    "langchain-mcp-adapters==0.0.9",
    "langchain-openai==0.3.16",
    "langgraph==0.4.3",
    "mcp[cli]==1.6.0",
    "python-dotenv==1.1.0",
    "requests==2.32.3",
    "ruff>=0.11.10",
]
